RESOLVED FIXED238167
[WebGPU] Lifetime of CommandEncoder's internal MTLBlitCommandEncoder is not managed correctly
https://bugs.webkit.org/show_bug.cgi?id=238167
Summary [WebGPU] Lifetime of CommandEncoder's internal MTLBlitCommandEncoder is not m...
Myles C. Maxfield
Reported 2022-03-21 16:48:25 PDT
[WebGPU] Lifetime of CommandEncoder's internal MTLBlitCommandEncoder is not managed correctly
Attachments
Patch (2.11 KB, patch)
2022-03-21 16:50 PDT, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2022-03-21 16:50:25 PDT
EWS
Comment 2 2022-03-22 11:55:29 PDT
Committed r291685 (248727@main): <https://commits.webkit.org/248727@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 455301 [details].
Radar WebKit Bug Importer
Comment 3 2022-03-22 11:56:16 PDT
Note You need to log in before you can comment on or make changes to this bug.