[WebGPU] Lifetime of CommandEncoder's internal MTLBlitCommandEncoder is not managed correctly https://bugs.webkit.org/show_bug.cgi?id=238167

Reviewed by Kimmo Kinnunen.

We lazily create a MTLBlitCommandEncoder inside CommandEncoder to service a few various calls
which require one. Metal has some state tracking inside it, such that when objects are destroyed,
they have to be in the right state. This patch aligns WebGPU's state tracking and Metal's state
tracking.

Test: api/validation/encoding/programmable/pipeline_bind_group_compat.spec.ts

* WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::~CommandEncoder):
(WebGPU::CommandEncoder::finalizeBlitCommandEncoder):



Canonical link: https://commits.webkit.org/248727@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@291685 268f45cc-cd09-0410-ab3c-d52691b4dbfc